--- a/src/pages/Improve/Tasks/Daily/index.less
+++ b/src/pages/Improve/Tasks/Daily/index.less
@@ -12,6 +12,9 @@
     box-shadow: 0 2px 4px 0 #c8c9cc;
     .overviewProgress {
       text-align: center;
+      p {
+        margin-bottom: 0px;
+      }
       :global {
         .ant-progress-outer {
           width: 100px;
