--- a/src/global.less
+++ b/src/global.less
@@ -30,6 +30,8 @@ ol {
 }
 .ant-pro-basicLayout-content {
   margin: 12px;
+  min-height: 600px;
+  background-color: #fff;
 }
 @media (max-width: @screen-xs) {
   .ant-table {
